@@ -16,6 +16,7 @@
 * Added Last Update column to feed list.
 * Added a setting for the number of items to display in the feed.
 * Added start_date and end_date options to all lifestream calls.
+* Fixed passing multiple arguments to [lifestream].
 
 0.93b
 
